modules/gdscript/tests/scripts/analyzer/errors/nullable_ternary.gd
func test():
    var foo: int? = null
    (foo if true else 0) + 1 # Should error